Better mod thumbnail

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ license="All rights reserved"
 modId="lemon_core"
 version="1.19.4-1.0.0"
 displayName="Lemon Core"
-logoFile="examplemod.png"
+logoFile="lemon_core.png"
 credits="Lemon_Juiced"
 authors="Lemon_Juiced"
 
