--- a/src/main/resources/data/lemon_core/recipes/decompacting/gems/sapphire_decompacting.json
+++ b/src/main/resources/data/lemon_core/recipes/decompacting/gems/sapphire_decompacting.json
@@ -6,7 +6,7 @@
         }
     ],
     "result": {
-        "item": "lemon_core:sapphire_shard",
+        "item": "lemon_core:sapphire_fragment",
         "count": 9
     }
 }
