--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,10 +1,10 @@
 modLoader="javafml"
 loaderVersion="[45,)"
-license="All rights reserved"
+license="GNU General Purpose License v3 (GPLv3)"
 
 [[mods]]
 modId="lemon_core"
-version="1.19.4-1.0.5"
+version="1.19.4-1.0.6"
 displayName="Lemon Core"
 logoFile="lemon_core.png"
 credits="Lemon_Juiced"
