--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '1.19.4-1.0.6'
+version = '1.20-1.0.7'
 group = 'lemon_juice.lemon_core' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'lemon_core'
 
@@ -124,13 +124,13 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.4-45.0.66'
+    minecraft 'net.minecraftforge:forge:1.20-46.0.2'
 
     // JEI
-    compileOnly fg.deobf("mezz.jei:jei-1.19.4-common-api:13.1.0.6")
-    compileOnly fg.deobf("mezz.jei:jei-1.19.4-forge-api:13.1.0.6")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.19.4-common:13.1.0.6")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.19.4-forge:13.1.0.6")
+    //compileOnly fg.deobf("mezz.jei:jei-1.19.4-common-api:13.1.0.6")
+    //compileOnly fg.deobf("mezz.jei:jei-1.19.4-forge-api:13.1.0.6")
+    //runtimeOnly fg.deobf("mezz.jei:jei-1.19.4-common:13.1.0.6")
+    //runtimeOnly fg.deobf("mezz.jei:jei-1.19.4-forge:13.1.0.6")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
