--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '1.20.1-1.0.12'
+version = '1.20-1.0.12'
 group = 'lemon_juice.lemon_core' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'lemon_core'
 
@@ -26,7 +26,7 @@ minecraft {
     //
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.20.1'
+    mappings channel: 'official', version: '1.20'
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
@@ -124,13 +124,13 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.20.1-47.0.1'
+    minecraft 'net.minecraftforge:forge:1.20-46.0.14'
 
     // JEI
-    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:15.0.0.15")
-    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.0.0.15")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-common:15.0.0.15")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.0.0.15")
+    //compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:15.0.0.15")
+    //compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.0.0.15")
+    //runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-common:15.0.0.15")
+    //runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.0.0.15")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
