--- a/src/main/resources/data/lemon_core/recipes/decompacting/block/sapphire_block_decompacting.json
+++ b/src/main/resources/data/lemon_core/recipes/decompacting/block/sapphire_block_decompacting.json
@@ -2,7 +2,7 @@
     "type": "minecraft:crafting_shapeless",
     "ingredients": [
         {
-            "tag": "forge:blocks/sapphire"
+            "tag": "forge:storage_blocks/sapphire"
         }
     ],
     "result": {
