--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,21 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+## Environment Properties
+minecraft_version=1.20.1
+minecraft_version_range=[1.20,1.21)
+neo_version=47.1.25
+neo_version_range=[47.1,)
+loader_version_range=[47,)
+mapping_channel=official
+mapping_version=1.20.1
+
+## Mod Properties
+mod_id=lemon_core
+mod_name=Lemon Core
+mod_license=GNU General Purpose License v3 (GPLv3)
+mod_version=1.20.1-1.0.22
+mod_group_id=lemon_juice.lemon_core
+mod_authors=Lemon_Juiced & Scalar Team
+mod_description=A set of core items and tagged materials for use in my other mods and cross-play.
+pack_format_number=15
