--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,27 +1,25 @@
 modLoader="javafml"
-loaderVersion="[47,)"
-license="GNU General Purpose License v3 (GPLv3)"
+loaderVersion="${loader_version_range}"
+license="${mod_license}"
 
 [[mods]]
-modId="lemon_core"
-version="1.20.1-1.0.21"
-displayName="Lemon Core"
+modId="${mod_id}"
+version="${mod_version}"
+displayName="${mod_name}"
 logoFile="lemon_core.png"
-authors="Lemon_Juiced & Scalar Team"
+authors="${mod_authors}"
 
-description='''
-A set of core items and tagged materials for use in my other mods and cross-play.
-'''
+description='''${mod_description}'''
 
-[[dependencies.lemon_core]]
+[[dependencies.${mod_id}]]
     modId="forge"
     mandatory=true
-    versionRange="[47,)"
+    versionRange="${neo_version_range}"
     ordering="NONE"
     side="BOTH"
-[[dependencies.lemon_core]]
+[[dependencies.${mod_id}]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.20.1,1.21)"
+    versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
