--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,12 @@ dependencies {
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.0.0.15")
     runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-common:15.0.0.15")
     runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.0.0.15")
+
+    // Ender IO
+    // runtimeOnly fg.deobf("curse.maven:ender-io-64578:4637542")
+
+    // Xychron
+    runtimeOnly fg.deobf("curse.maven:xychron-877090:4661104")
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
