--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ mapping_version=1.20.1
 ## Mod Properties
 mod_id=lemon_core
 mod_name=Lemon Core
-mod_license=GNU General Purpose License v3 (GPLv3)
-mod_version=1.20.1-1.0.30
+mod_license=GNU General Public License v3 (GPLv3)
+mod_version=1.20.1-1.0.31
 mod_group_id=lemon_juice.lemon_core
 mod_authors=Lemon_Juiced & Scalar Team
 mod_description=A set of core items and tagged materials for use in my other mods and cross-play.
