--- a/src/main/resources/data/lemon_core/recipes/crafting/ore_crushing_hammers/dusts/sapphire.json
+++ b/src/main/resources/data/lemon_core/recipes/crafting/ore_crushing_hammers/dusts/sapphire.json
@@ -2,7 +2,7 @@
   "type": "minecraft:crafting_shapeless",
   "ingredients": [
     {
-      "gems": "forge:gems/sapphire"
+      "tag": "forge:gems/sapphire"
     },
     {
       "tag": "forge:ore_crushing_hammers"
