--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -22,3 +22,9 @@ description='''${mod_description}'''
     versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
+[[dependencies.${mod_id}]]
+    modId="lembrary"
+    mandatory=true
+    versionRange="[1.20.1+-1.0.0,)"
+    ordering="NONE"
+    side="BOTH"
