--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -25,6 +25,6 @@ description='''${mod_description}'''
 [[dependencies.${mod_id}]]
     modId="lembrary"
     mandatory=true
-    versionRange="[1.20.1+-1.0.0,)"
+    versionRange="[1.20.1-1.0.1,)"
     ordering="NONE"
     side="BOTH"
