--- a/build.gradle
+++ b/build.gradle
@@ -1,70 +1,16 @@
 plugins {
+    id 'java-library'
     id 'eclipse'
     id 'idea'
     id 'maven-publish'
-    id 'net.neoforged.gradle' version '[6.0.18,6.2)'
+    id 'net.neoforged.gradle.userdev' version '7.0.45'
 }
 
 version = mod_version
 group = mod_group_id
 
-base {
-    archivesName = mod_id
-}
-
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
-
-println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
-minecraft {
-    mappings channel: mapping_channel, version: mapping_version
-    copyIdeResources = true
-    runs {
-        configureEach {
-            workingDirectory project.file('run')
-
-            property 'forge.logging.markers', 'REGISTRIES'
-
-            property 'forge.logging.console.level', 'debug'
-
-            mods {
-                "${mod_id}" {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        client {
-            property 'forge.enabledGameTestNamespaces', mod_id
-
-            //Mixin Stuff
-            property 'mixin.env.remapRefMap', 'true'
-            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-        }
-
-        server {
-            property 'forge.enabledGameTestNamespaces', mod_id
-            args '--nogui'
-
-            //Mixin Stuff
-            property 'mixin.env.remapRefMap', 'true'
-            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-        }
-
-        gameTestServer {
-            property 'forge.enabledGameTestNamespaces', mod_id
-        }
-
-        data {
-            workingDirectory project.file('run-data')
-
-            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-        }
-    }
-}
-
-sourceSets.main.resources { srcDir 'src/generated/resources' }
-
 repositories {
+    mavenLocal()
     maven { url = "https://maven.theillusivec4.top/"}
     maven { url = "https://dvs1.progwml6.com/files/maven/"}
     maven { url = "https://modmaven.dev"}
@@ -72,30 +18,64 @@ repositories {
     maven { url = "https://www.cursemaven.com"}
 }
 
-dependencies {
-    minecraft "net.neoforged:forge:${minecraft_version}-${neo_version}"
+base {
+    archivesName = mod_id
+}
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+runs {
+    configureEach {
+        systemProperty 'forge.logging.markers', 'REGISTRIES'
 
-    // JEI
-    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:15.0.0.15")
-    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.0.0.15")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-common:15.0.0.15")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.0.0.15")
+        systemProperty 'forge.logging.console.level', 'debug'
 
-    // Lembrary Dependency
-    compileOnly fg.deobf("curse.maven:lembrary-937474:4888861")
-    runtimeOnly fg.deobf("curse.maven:lembrary-937474:4888861")
+        modSource project.sourceSets.main
+    }
 
-    // AE2
-    runtimeOnly fg.deobf("curse.maven:applied-energistics-2-223794:4857895")
+    client {
+        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
+    }
 
-    // Ender IO
-    runtimeOnly fg.deobf("curse.maven:ender-io-64578:4762194")
+    server {
+        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
+        programArgument '--nogui'
+    }
 
-    // Xychron
-    runtimeOnly fg.deobf("curse.maven:xychron-877090:4661104")
+    gameTestServer {
+        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
+    }
+
+    data {
+        programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
+    }
 }
 
-tasks.named('processResources', ProcessResources).configure {
+sourceSets.main.resources { srcDir 'src/generated/resources' }
+
+
+dependencies {
+    implementation "net.neoforged:neoforge:${neo_version}"
+
+    // JEI
+    //compileOnly "mezz.jei:jei-1.20.1-common-api:15.0.0.15"
+    //compileOnly "mezz.jei:jei-1.20.1-forge-api:15.0.0.15"
+    //runtimeOnly "mezz.jei:jei-1.20.1-common:15.0.0.15"
+    //runtimeOnly "mezz.jei:jei-1.20.1-forge:15.0.0.15"
+
+    // Lembrary Dependency
+    compileOnly "curse.maven:lembrary-937474:4892325"
+    runtimeOnly "curse.maven:lembrary-937474:4892325"
+
+    // AE2
+    //runtimeOnly fg.deobf("curse.maven:applied-energistics-2-223794:4857895")
+
+    // Ender IO
+    //runtimeOnly fg.deobf("curse.maven:ender-io-64578:4762194")
+
+    // Xychron
+    //runtimeOnly fg.deobf("curse.maven:xychron-877090:4661104")
+}
+
+tasks.withType(ProcessResources).configureEach {
     var replaceProperties = [
             minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
             neo_version         : neo_version, neo_version_range: neo_version_range,
@@ -110,30 +90,15 @@ tasks.named('processResources', ProcessResources).configure {
     }
 }
 
-tasks.named('jar', Jar).configure {
-    manifest {
-        attributes([
-                'Specification-Title'     : mod_id,
-                'Specification-Vendor'    : mod_authors,
-                'Specification-Version'   : '1', // We are version 1 of ourselves
-                'Implementation-Title'    : project.name,
-                'Implementation-Version'  : project.jar.archiveVersion,
-                'Implementation-Vendor'   : mod_authors,
-                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-        ])
-    }
-    finalizedBy 'reobfJar'
-}
-
 publishing {
     publications {
         register('mavenJava', MavenPublication) {
-            artifact jar
+            from components.java
         }
     }
     repositories {
         maven {
-            url "file://${project.projectDir}/mcmodsrepo"
+            url "file://${project.projectDir}/repo"
         }
     }
 }
