--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,22 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.debug=false
 
 ## Environment Properties
-minecraft_version=1.20.1
-minecraft_version_range=[1.20,1.21)
-neo_version=47.1.25
-neo_version_range=[47.1,)
-loader_version_range=[47,)
+minecraft_version=1.20.2
+minecraft_version_range=[1.20.2,1.21)
+neo_version=20.2.59-beta
+neo_version_range=[20.2,)
+loader_version_range=[1,)
 mapping_channel=official
-mapping_version=1.20.1
+mapping_version=1.20.2
 
 ## Mod Properties
 mod_id=lemon_core
 mod_name=Lemon Core
 mod_license=GNU General Public License v3 (GPLv3)
-mod_version=1.20.1-1.0.48
+mod_version=1.20.1-1.1.0
 mod_group_id=lemon_juice.lemon_core
 mod_authors=Lemon_Juiced & Scalar Team
 mod_description=A set of core items and tagged materials for use in my other mods and cross-play.
-pack_format_number=15
+pack_format_number=18
